Update Clean repo Make file transfert working on Android